fixed entity id issue

--- a/notebooks/dev/ingest_congruence.ipynb
+++ b/notebooks/dev/ingest_congruence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "14                                         None         None      None  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "176615"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
        "49  representative                 None            4"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
        "164758"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "2  EU rejects German call to boycott British lamb .  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,36 +863,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def spread_unit_neighbours(df, window_size = 1):\n",
+    "def spread_unit_neighbours(raw_df, window_size=1):\n",
+    "    \n",
+    "    df = raw_df.copy()\n",
+    "\n",
     "    for w in range(window_size, 0, -1):\n",
     "        df['m-'+str(w)] = None\n",
-    "        df.loc[df.full_mention.notnull(), 'm-'+str(w)] = df['full_mention'].dropna().groupby(df['unit_number']).shift(+w)\n",
+    "        df.loc[df.full_mention.notnull(), 'm-'+str(w)] = df.loc[df.full_mention.notnull(), 'full_mention'].groupby(df['unit_number']).shift(+w)\n",
     "        df['e-'+str(w)] = None\n",
-    "        df.loc[df.full_mention.notnull(), 'e-'+str(w)] = df['wikipedia_ID'].dropna().groupby(df['unit_number']).shift(+w)\n",
+    "        df.loc[df.full_mention.notnull(), 'e-'+str(w)] = df.loc[df.full_mention.notnull(), 'wikipedia_ID'].groupby(df['unit_number']).shift(+w)\n",
     "    for w in range(1, window_size+1):\n",
     "        df['m+'+str(w)] = None\n",
-    "        df.loc[df.full_mention.notnull(), 'm+'+str(w)] = df['full_mention'].dropna().groupby(df['unit_number']).shift(-w)\n",
+    "        df.loc[df.full_mention.notnull(), 'm+'+str(w)] = df.loc[df.full_mention.notnull(), 'full_mention'].groupby(df['unit_number']).shift(-w)\n",
     "        df['e+'+str(w)] = None\n",
-    "        df.loc[df.full_mention.notnull(), 'e+'+str(w)] = df['wikipedia_ID'].dropna().groupby(df['unit_number']).shift(-w) \n",
+    "        df.loc[df.full_mention.notnull(), 'e+'+str(w)] = df.loc[df.full_mention.notnull(), 'wikipedia_ID'].groupby(df['unit_number']).shift(-w) \n",
+    "        \n",
+    "    drop_columns = ['mention', 'YAGO2', 'wikipedia_URL', 'freebase']\n",
+    "    df.drop(drop_columns, axis=1, inplace=True)\n",
+    "    \n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acy_df = spread_unit_neighbours(acy_df, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -946,9 +944,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>German</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>11867</td>\n",
        "      <td>British</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>31717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -976,7 +974,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>EU</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>British</td>\n",
        "      <td>31717</td>\n",
        "      <td>NaN</td>\n",
@@ -1038,7 +1036,7 @@
        "      <td>0</td>\n",
        "      <td>EU rejects German call to boycott British lamb .</td>\n",
        "      <td>EU</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>German</td>\n",
        "      <td>11867</td>\n",
        "      <td>NaN</td>\n",
@@ -1090,7 +1088,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Peter Blackburn</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -1104,7 +1102,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Peter Blackburn</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1716,7 +1714,7 @@
        "      <td>European Union</td>\n",
        "      <td>9317</td>\n",
        "      <td>Werner Zwingmann</td>\n",
-       "      <td>31717</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
@@ -1730,9 +1728,9 @@
        "      <td>European Union</td>\n",
        "      <td>9317</td>\n",
        "      <td>Werner Zwingmann</td>\n",
-       "      <td>31717</td>\n",
+       "      <td>None</td>\n",
        "      <td>Werner Zwingmann</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1844,17 +1842,17 @@
        "53  Germany 's representative to the European Unio...              Germany   \n",
        "\n",
        "      e-2                  m-1    e-1                  m+1    e+1  \\\n",
-       "0     NaN                  NaN    NaN               German    NaN   \n",
+       "0     NaN                  NaN    NaN               German  11867   \n",
        "1    None                 None   None                 None   None   \n",
-       "2     NaN                   EU    NaN              British  31717   \n",
+       "2     NaN                   EU   None              British  31717   \n",
        "3    None                 None   None                 None   None   \n",
        "4    None                 None   None                 None   None   \n",
        "5    None                 None   None                 None   None   \n",
-       "6     NaN               German  11867                  NaN    NaN   \n",
+       "6    None               German  11867                  NaN    NaN   \n",
        "7    None                 None   None                 None   None   \n",
        "8    None                 None   None                 None   None   \n",
-       "10    NaN                  NaN    NaN      Peter Blackburn    NaN   \n",
-       "11    NaN      Peter Blackburn    NaN                  NaN    NaN   \n",
+       "10    NaN                  NaN    NaN      Peter Blackburn   None   \n",
+       "11    NaN      Peter Blackburn   None                  NaN    NaN   \n",
        "13    NaN                  NaN    NaN                  NaN    NaN   \n",
        "14   None                 None   None                 None   None   \n",
        "16   None                 None   None                 None   None   \n",
@@ -1893,10 +1891,10 @@
        "50   None                 None   None                 None   None   \n",
        "51   None                 None   None                 None   None   \n",
        "52    NaN              Germany  11867       European Union   9317   \n",
-       "53  11867       European Union   9317     Werner Zwingmann  31717   \n",
+       "53  11867       European Union   9317     Werner Zwingmann   None   \n",
        "\n",
        "                 m+2    e+2  \n",
-       "0            British    NaN  \n",
+       "0            British  31717  \n",
        "1               None   None  \n",
        "2                NaN    NaN  \n",
        "3               None   None  \n",
@@ -1944,25 +1942,18 @@
        "49              None   None  \n",
        "50              None   None  \n",
        "51              None   None  \n",
-       "52  Werner Zwingmann  31717  \n",
-       "53  Werner Zwingmann    NaN  "
+       "52  Werner Zwingmann   None  \n",
+       "53  Werner Zwingmann   None  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "acy_df.iloc[0:50, [0, 2, 5]+[*range(7, len(acy_df.columns))]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODO:\n",
-    "Bug where the very first mention in the entire dataframe (not the first mention within each unit!) doesn't get entity IDs of neighbouring mentions properly. It seems to work for *all* the others. Need to fix cleanly or just hardcode a hotfix to the very first mention."
+    "acy_df_neighbours = spread_unit_neighbours(acy_df, 2)\n",
+    "acy_df_neighbours.head(50)"
    ]
   }
  ],
@@ -1982,7 +1973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
