--- a/notebooks/pipeline/1_process_acy_input.ipynb
+++ b/notebooks/pipeline/1_process_acy_input.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "2  http://en.wikipedia.org/wiki/Germany        11867  /m/0345h  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
     "acy_df = pd.DataFrame(data=df[1:])\n",
     "new_columns = [\"token\", \"mention\", \"full_mention\", \"YAGO2\", \"wikipedia_URL\", \"wikipedia_ID\", \"freebase\"]\n",
     "acy_df = acy_df.rename(columns=dict(zip(range(7), new_columns)))\n",
-    "acy_df.head(3)"
+    "acy_df.head(10)"
    ]
   },
   {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -222,7 +222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 176615/176615 [00:20<00:00, 8591.61it/s]\n"
+      "100%|██████████| 176615/176615 [00:12<00:00, 14506.79it/s]\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "644       None           24       2  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
        "24           [None, China, Taiwan]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,15 +804,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 358 ms, sys: 95.5 ms, total: 453 ms\n",
-      "Wall time: 517 ms\n"
+      "CPU times: user 307 ms, sys: 18.8 ms, total: 326 ms\n",
+      "Wall time: 325 ms\n"
      ]
     },
     {
@@ -878,7 +878,7 @@
        "4                                       [None, European Union]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1024,7 @@
        "4            1       0  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,14 +1036,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29312/29312 [00:06<00:00, 4704.32it/s]\n"
+      "100%|██████████| 29312/29312 [00:05<00:00, 5359.59it/s]\n"
      ]
     }
    ],
@@ -1067,9 +1067,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop a few columns we aren't explicitly using\n",
+    "acy_input = acy_input.drop(columns=[\n",
+    "    'token',\n",
+    "    'YAGO2',\n",
+    "    'freebase'\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percent with No Wikipedia URL:  0.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# There are a number of full_mentions without a response variable ('wikipedia_URL') that we can check against.\n",
+    "# We drop these for now so we can better assess accuracy.\n",
+    "\n",
+    "# Size of blank wikipedia_URL problem\n",
+    "print(\"Percent with No Wikipedia URL: \",\\\n",
+    "      round(sum(acy_input['wikipedia_URL'].apply(type) == float)/len(acy_input)*100,3), \"%\")\n",
+    "\n",
+    "acy_input = acy_input[acy_input['wikipedia_URL'].notnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of Final Input Dataset:  22257\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1091,13 +1136,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>token</th>\n",
        "      <th>mention</th>\n",
        "      <th>full_mention</th>\n",
-       "      <th>YAGO2</th>\n",
        "      <th>wikipedia_URL</th>\n",
        "      <th>wikipedia_ID</th>\n",
-       "      <th>freebase</th>\n",
        "      <th>sentence_id</th>\n",
        "      <th>doc_id</th>\n",
        "      <th>congruent_entities</th>\n",
@@ -1105,66 +1147,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EU</td>\n",
-       "      <td>B</td>\n",
-       "      <td>EU</td>\n",
-       "      <td>--NME--</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[EU, German, British]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>German</td>\n",
        "      <td>B</td>\n",
        "      <td>German</td>\n",
-       "      <td>Germany</td>\n",
        "      <td>http://en.wikipedia.org/wiki/Germany</td>\n",
        "      <td>11867</td>\n",
-       "      <td>/m/0345h</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[EU, German, British]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>British</td>\n",
        "      <td>B</td>\n",
        "      <td>British</td>\n",
-       "      <td>United_Kingdom</td>\n",
        "      <td>http://en.wikipedia.org/wiki/United_Kingdom</td>\n",
        "      <td>31717</td>\n",
-       "      <td>/m/07ssc</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>[EU, German, British]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Peter</td>\n",
+       "      <th>5</th>\n",
        "      <td>B</td>\n",
-       "      <td>Peter Blackburn</td>\n",
-       "      <td>--NME--</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>BRUSSELS</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Brussels</td>\n",
+       "      <td>3708</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>[Peter Blackburn, BRUSSELS, European Commissio...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Blackburn</td>\n",
+       "      <th>6</th>\n",
+       "      <td>B</td>\n",
+       "      <td>European Commission</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/European_Commission</td>\n",
+       "      <td>9974</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[Peter Blackburn, BRUSSELS, European Commissio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>I</td>\n",
-       "      <td>Peter Blackburn</td>\n",
-       "      <td>--NME--</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
+       "      <td>European Commission</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/European_Commission</td>\n",
+       "      <td>9974</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>[Peter Blackburn, BRUSSELS, European Commissio...</td>\n",
@@ -1174,36 +1201,60 @@
        "</div>"
       ],
       "text/plain": [
-       "       token mention     full_mention           YAGO2  \\\n",
-       "0         EU       B               EU         --NME--   \n",
-       "1     German       B           German         Germany   \n",
-       "2    British       B          British  United_Kingdom   \n",
-       "3      Peter       B  Peter Blackburn         --NME--   \n",
-       "4  Blackburn       I  Peter Blackburn         --NME--   \n",
+       "  mention         full_mention  \\\n",
+       "1       B               German   \n",
+       "2       B              British   \n",
+       "5       B             BRUSSELS   \n",
+       "6       B  European Commission   \n",
+       "7       I  European Commission   \n",
        "\n",
-       "                                 wikipedia_URL wikipedia_ID  freebase  \\\n",
-       "0                                         None         None      None   \n",
-       "1         http://en.wikipedia.org/wiki/Germany        11867  /m/0345h   \n",
-       "2  http://en.wikipedia.org/wiki/United_Kingdom        31717  /m/07ssc   \n",
-       "3                                         None         None      None   \n",
-       "4                                         None         None      None   \n",
+       "                                      wikipedia_URL wikipedia_ID  sentence_id  \\\n",
+       "1              http://en.wikipedia.org/wiki/Germany        11867            0   \n",
+       "2       http://en.wikipedia.org/wiki/United_Kingdom        31717            0   \n",
+       "5             http://en.wikipedia.org/wiki/Brussels         3708            1   \n",
+       "6  http://en.wikipedia.org/wiki/European_Commission         9974            1   \n",
+       "7  http://en.wikipedia.org/wiki/European_Commission         9974            1   \n",
        "\n",
-       "   sentence_id  doc_id                                 congruent_entities  \n",
-       "0            0       0                              [EU, German, British]  \n",
-       "1            0       0                              [EU, German, British]  \n",
-       "2            0       0                              [EU, German, British]  \n",
-       "3            1       0  [Peter Blackburn, BRUSSELS, European Commissio...  \n",
-       "4            1       0  [Peter Blackburn, BRUSSELS, European Commissio...  "
+       "   doc_id                                 congruent_entities  \n",
+       "1       0                              [EU, German, British]  \n",
+       "2       0                              [EU, German, British]  \n",
+       "5       0  [Peter Blackburn, BRUSSELS, European Commissio...  \n",
+       "6       0  [Peter Blackburn, BRUSSELS, European Commissio...  \n",
+       "7       0  [Peter Blackburn, BRUSSELS, European Commissio...  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"Length of Final Input Dataset: \", len(acy_input))\n",
     "acy_input.head(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Processed Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acy_input.to_csv(os.path.join(acy_path, \"Aida-Conll-Yago-Input.csv\"), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
