Add to pipeline Anchor Links Generation

--- a/notebooks/pipeline/2_w2v_get_entities.ipynb
+++ b/notebooks/pipeline/2_w2v_get_entities.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "      <th>mention</th>\n",
        "      <th>full_mention</th>\n",
        "      <th>wikipedia_URL</th>\n",
-       "      <th>wikipedia_ID</th>\n",
+       "      <th>wikipedia_page_ID</th>\n",
        "      <th>wikipedia_title</th>\n",
        "      <th>sentence_id</th>\n",
        "      <th>doc_id</th>\n",
@@ -121,10 +121,10 @@
        "1       B       German         http://en.wikipedia.org/wiki/Germany   \n",
        "2       B      British  http://en.wikipedia.org/wiki/United_Kingdom   \n",
        "\n",
-       "   wikipedia_ID wikipedia_title  sentence_id  doc_id  \\\n",
-       "0           NaN             NaN            0       0   \n",
-       "1       11867.0         Germany            0       0   \n",
-       "2       31717.0  United Kingdom            0       0   \n",
+       "   wikipedia_page_ID wikipedia_title  sentence_id  doc_id  \\\n",
+       "0                NaN             NaN            0       0   \n",
+       "1            11867.0         Germany            0       0   \n",
+       "2            31717.0  United Kingdom            0       0   \n",
        "\n",
        "            congruent_mentions  \n",
        "0  ['EU', 'German', 'British']  \n",
@@ -132,7 +132,7 @@
        "2  ['EU', 'German', 'British']  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Re-name for this predictive step\n",
-    "entity_disambiguation = acy_input"
+    "preds_w2v_getentities = acy_input"
    ]
   },
   {
@@ -182,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 88.2 ms, sys: 121 ms, total: 209 ms\n",
-      "Wall time: 231 ms\n"
+      "CPU times: user 94.3 ms, sys: 180 ms, total: 274 ms\n",
+      "Wall time: 326 ms\n"
      ]
     }
    ],
@@ -202,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29312/29312 [00:01<00:00, 18618.48it/s]"
+      "100%|██████████| 29312/29312 [00:00<00:00, 59098.81it/s]"
      ]
     },
     {
@@ -262,45 +262,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Commission Regulation', 'Magna International Inc',\n",
-       "       'N. Fairbrother', 'SEATTLE', 'S. Watkin', 'Wisinga', 'Open',\n",
-       "       'Joel Stranksy', 'Toledo', 'Norwegian', 'BOSTON', 'Bulatka',\n",
-       "       'Gimnasia-Jujuy', 'NEW YORK', 'DUBAI', 'VERONA', 'Makinen',\n",
-       "       'Communications and Transportation Ministry', 'Israeli', 'Celtic',\n",
-       "       'T&N Plc', 'TOUR OF NETHERLANDS', 'Norman', 'William Hill',\n",
-       "       'BELGRADE', 'Devon White', 'Birmingham Public Park & Rec',\n",
-       "       'Michel Zanoli', 'Schroder Wertheim & Co', 'WESTERN DIVISION',\n",
-       "       'Port Christine', 'CHICAGO', 'Mentmore Abbey', 'PRAGUE',\n",
-       "       'Batterby', 'Roosevelt', 'Kocinski', 'Palmans', 'Dutch',\n",
-       "       'Bernd Zobel', 'NEW YORK', 'Toronto-based', 'Smith',\n",
-       "       'Singapore Newsroom', 'Schroder Wertheim & Co', 'Chris Lewis',\n",
-       "       'Yugoslav', 'BRITISH MASTERS', 'British Airways-American',\n",
-       "       'Dalglish', 'COLORADO', 'Mujahideen Khalq', 'BEIJING',\n",
-       "       'U.N. Department of Humanitarian Affairs', 'Everton',\n",
-       "       'Massachusetts Association of Realtors', 'Sion', 'Herve Thuet',\n",
-       "       'Steve Brown', 'OMAHA', 'Coughlan', 'MIDEAST GULF', 'OM',\n",
-       "       'AMERICAN LEAGUE EASTERN DIVISION', 'TOUR OF NETHERLANDS',\n",
-       "       \"O'Brien\", 'European', 'Alexander Volkov',\n",
-       "       \"National Socialist German Workers ' Party Foreign Organisation\",\n",
-       "       'S. Lampitt', 'PARAMARIBO', 'Jarmo Kytolehto', 'Iraqi',\n",
-       "       'Thomas Nyariki', 'Martin', 'Democratic National United Movement',\n",
-       "       'Lehman Brothers International', 'Mohamed Zejjari', 'PUK',\n",
-       "       'Britain', 'UNITED NATIONS', 'Neagle', 'Mohammad Akram',\n",
-       "       'Mark Brooks', 'JYVASKYLA', 'Iranian',\n",
-       "       'Palestinian self-rule Authority', 'Yvan Quentin', 'EURO CUP',\n",
-       "       'A. Symonds', 'Popular Party', 'Corser', 'East Fife',\n",
-       "       'Amsterdam Newsroom', 'TORONTO', 'MONTREAL', 'Olympic',\n",
-       "       'Oppenheimer Capital', 'Mushtaq Ahmed', 'Channel Two'],\n",
-       "      dtype='<U129')"
+       "array(['Gencor', 'Francisco Cea', 'Aoki', '.Robbie McEwen',\n",
+       "       'Marion County Board of Education', 'Huracan-Corrientes',\n",
+       "       'Sergey Makarov', 'WESTERN DIVISION', 'PARIS', 'Spanish',\n",
+       "       'Michael Andersson', 'Chris Adams', 'Pietro T.',\n",
+       "       \"Saturday'sWorld Cup\", 'Alberto Costa', 'French', 'Grand Slam',\n",
+       "       'R. Fay', 'Zarak Jahan Khan', 'Footscray', 'ASIAN CUP',\n",
+       "       'Pauline Konga', 'CAMPESE', 'Ronaldo Gonzalez', 'St Helens',\n",
+       "       'New York', 'Orii Corp', 'Indonesian', 'Chelsea', 'Edna Fernandes',\n",
+       "       'KANSAS CITY', 'ENGLISH', 'Slight', 'Tom Watson', 'Li Feng',\n",
+       "       'WESTERN DIVISION', 'Simona de Logu', 'Grand Slam', 'R. Irani',\n",
+       "       'Japanese', 'UEFA Fair Play', 'DALGLISH', 'McGregor',\n",
+       "       'KANSAS CITY', 'New York', 'First Battle of the Newbury bypass',\n",
+       "       'Brian Homewood', 'Hatoyama', 'PARIS',\n",
+       "       'Security Dynamics Technologies Inc.', 'Duran', 'John Gorst',\n",
+       "       'Eric Bergoust', 'EUROPEAN CUP', 'State ( central ) Bank',\n",
+       "       'Terry Price', 'Herschelle Gibs', 'Japanese', 'Mohammad Akam',\n",
+       "       'A. Mullally', 'Italian', 'UEFA Fair Play', 'KANSAS CITY',\n",
+       "       'MONTREAL', 'Chamber of Economy', 'Brewpole BV', 'English',\n",
+       "       'Strike Hard', 'New York', 'Juppe', 'SIMEX Brent',\n",
+       "       'Zubair Jahan Khan', 'U.S. Postal', 'Dutch', 'Kalf, Voorhis & Co',\n",
+       "       'Marco Lietti', 'Russian-Chechen', 'MINNESOTA', 'Kocinski',\n",
+       "       'St Kilda', 'Julien Bonetat', 'SAN FRANCISCO', 'Dutch',\n",
+       "       'Uneximbank', 'NEW YORK', 'Security Dynamics Technologies Inc.',\n",
+       "       'NEW YORK', 'UEFA Fair Play', 'Brazilian Plastic Surgery Society',\n",
+       "       'Haitham Haddadin', 'Vebjoen Rodal', 'Reuter London Newsroom',\n",
+       "       'UEFA Fair Play', 'Britain', 'Eric Bergoust',\n",
+       "       \"European Cup Winners ' Cup\", 'Peter Teravainen', 'Britain',\n",
+       "       'Iraqi', 'SAN MATEO'], dtype='<U129')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +337,7 @@
        "      <th>mention</th>\n",
        "      <th>full_mention</th>\n",
        "      <th>wikipedia_URL</th>\n",
-       "      <th>wikipedia_ID</th>\n",
+       "      <th>wikipedia_page_ID</th>\n",
        "      <th>wikipedia_title</th>\n",
        "      <th>sentence_id</th>\n",
        "      <th>doc_id</th>\n",
@@ -485,17 +483,17 @@
        "8       B               German   \n",
        "9       B              British   \n",
        "\n",
-       "                                      wikipedia_URL  wikipedia_ID  \\\n",
-       "0                                               NaN           NaN   \n",
-       "1              http://en.wikipedia.org/wiki/Germany       11867.0   \n",
-       "2       http://en.wikipedia.org/wiki/United_Kingdom       31717.0   \n",
-       "3                                               NaN           NaN   \n",
-       "4                                               NaN           NaN   \n",
-       "5             http://en.wikipedia.org/wiki/Brussels        3708.0   \n",
-       "6  http://en.wikipedia.org/wiki/European_Commission        9974.0   \n",
-       "7  http://en.wikipedia.org/wiki/European_Commission        9974.0   \n",
-       "8              http://en.wikipedia.org/wiki/Germany       11867.0   \n",
-       "9       http://en.wikipedia.org/wiki/United_Kingdom       31717.0   \n",
+       "                                      wikipedia_URL  wikipedia_page_ID  \\\n",
+       "0                                               NaN                NaN   \n",
+       "1              http://en.wikipedia.org/wiki/Germany            11867.0   \n",
+       "2       http://en.wikipedia.org/wiki/United_Kingdom            31717.0   \n",
+       "3                                               NaN                NaN   \n",
+       "4                                               NaN                NaN   \n",
+       "5             http://en.wikipedia.org/wiki/Brussels             3708.0   \n",
+       "6  http://en.wikipedia.org/wiki/European_Commission             9974.0   \n",
+       "7  http://en.wikipedia.org/wiki/European_Commission             9974.0   \n",
+       "8              http://en.wikipedia.org/wiki/Germany            11867.0   \n",
+       "9       http://en.wikipedia.org/wiki/United_Kingdom            31717.0   \n",
        "\n",
        "       wikipedia_title  sentence_id  doc_id  \\\n",
        "0                  NaN            0       0   \n",
@@ -522,15 +520,15 @@
        "9  ['Peter Blackburn', 'BRUSSELS', 'European Comm...                 None  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Append predictions to table\n",
-    "entity_disambiguation['preds_w2v_getentity'] = preds_w2v_getentity\n",
-    "entity_disambiguation.head(10)"
+    "preds_w2v_getentities['preds_w2v_getentity'] = preds_w2v_getentity\n",
+    "preds_w2v_getentities.head(10)"
    ]
   },
   {
@@ -542,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -564,20 +562,20 @@
    "source": [
     "# Calculate accuracy\n",
     "print(\"****************************\")\n",
-    "overall_accuracy = (entity_disambiguation['preds_w2v_getentity'] == entity_disambiguation['wikipedia_title']).sum()\n",
-    "print(f\"All-Inclusive Predictive Accuracy: {round(overall_accuracy / len(entity_disambiguation) * 100, 3)}%\")\n",
+    "overall_accuracy = (preds_w2v_getentities['preds_w2v_getentity'] == preds_w2v_getentities['wikipedia_title']).sum()\n",
+    "print(f\"All-Inclusive Predictive Accuracy: {round(overall_accuracy / len(preds_w2v_getentities) * 100, 3)}%\")\n",
     "print(\"Note: All Full Mentions, whether they have a known true value or not.\")\n",
     "\n",
     "print(\"****************************\")\n",
-    "filtered_df = entity_disambiguation[entity_disambiguation['wikipedia_ID'].notnull()]\n",
+    "filtered_df = preds_w2v_getentities[preds_w2v_getentities['wikipedia_page_ID'].notnull()]\n",
     "mention_accuracy = (filtered_df['preds_w2v_getentity'] == filtered_df['wikipedia_title']).sum()\n",
     "print(f\"Filter Empty Mentions Mention Predictive Accuracy: {round(mention_accuracy / len(filtered_df) * 100, 3)}%\")\n",
     "print(\"Note: Only Full Mentions with a known true value\")\n",
     "\n",
     "\n",
     "print(\"****************************\")\n",
-    "filtered_df = entity_disambiguation[entity_disambiguation['wikipedia_ID'].notnull()\\\n",
-    "                                   & entity_disambiguation['preds_w2v_getentity'].notnull()]\n",
+    "filtered_df = preds_w2v_getentities[preds_w2v_getentities['wikipedia_page_ID'].notnull()\\\n",
+    "                                   & preds_w2v_getentities['preds_w2v_getentity'].notnull()]\n",
     "result_accuracy = (filtered_df['preds_w2v_getentity'] == filtered_df['wikipedia_title']).sum()\n",
     "print(f\"Filter Empty Results Predictive Accuracy: {round(result_accuracy / len(filtered_df) * 100, 3)}%\")\n",
     "print(\"Note: Only full mentions with a known true value that returned a result from Wikipedia2vec\")"
@@ -585,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -605,25 +603,25 @@
        "Name: wikipedia_title, Length: 22257, dtype: object"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "entity_disambiguation[entity_disambiguation['wikipedia_title'].notnull()]['wikipedia_title']"
+    "preds_w2v_getentities[preds_w2v_getentities['wikipedia_title'].notnull()]['wikipedia_title']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22257/22257 [00:00<00:00, 35762.66it/s]"
+      "100%|██████████| 22257/22257 [00:00<00:00, 127382.29it/s]"
      ]
     },
     {
@@ -631,7 +629,7 @@
      "output_type": "stream",
      "text": [
       "****************************\n",
-      "Wikipedia2vec failed to return 594 searches, 2.026%\n",
+      "Wikipedia2vec failed to return 594 searches, 2.669%\n",
       "****************************\n",
       "All-Inclusive Predictive Accuracy: 91.374%\n",
       "****************************\n"
@@ -650,7 +648,8 @@
     "# Basically, if we plug in the literal Wikipedia URL, will it return the right result\n",
     "none_count = 0\n",
     "answers = []\n",
-    "for r in tqdm(entity_disambiguation[entity_disambiguation['wikipedia_title'].notnull()]['wikipedia_title']):\n",
+    "wikipedia_title = preds_w2v_getentities[preds_w2v_getentities['wikipedia_title'].notnull()]['wikipedia_title']\n",
+    "for r in tqdm(wikipedia_title):\n",
     "    answer = w2v.get_entity(r)\n",
     "    if answer is None:\n",
     "        none_count += 1\n",
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +701,7 @@
        "      <th>mention</th>\n",
        "      <th>full_mention</th>\n",
        "      <th>wikipedia_URL</th>\n",
-       "      <th>wikipedia_ID</th>\n",
+       "      <th>wikipedia_page_ID</th>\n",
        "      <th>wikipedia_title</th>\n",
        "      <th>sentence_id</th>\n",
        "      <th>doc_id</th>\n",
@@ -757,10 +756,10 @@
        "1       B       German         http://en.wikipedia.org/wiki/Germany   \n",
        "2       B      British  http://en.wikipedia.org/wiki/United_Kingdom   \n",
        "\n",
-       "   wikipedia_ID wikipedia_title  sentence_id  doc_id  \\\n",
-       "0           NaN             NaN            0       0   \n",
-       "1       11867.0         Germany            0       0   \n",
-       "2       31717.0  United Kingdom            0       0   \n",
+       "   wikipedia_page_ID wikipedia_title  sentence_id  doc_id  \\\n",
+       "0                NaN             NaN            0       0   \n",
+       "1            11867.0         Germany            0       0   \n",
+       "2            31717.0  United Kingdom            0       0   \n",
        "\n",
        "            congruent_mentions preds_w2v_getentity  \n",
        "0  ['EU', 'German', 'British']      European Union  \n",
@@ -768,25 +767,25 @@
        "2  ['EU', 'German', 'British']                None  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# See final output\n",
-    "entity_disambiguation.head(3)"
+    "preds_w2v_getentities.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save dataframe\n",
     "preds_path = '../../predictions/'\n",
-    "entity_disambiguation.to_csv(os.path.join(preds_path, \"wikipedia2vec_getentities.csv\"), index=False)"
+    "preds_w2v_getentities.to_csv(os.path.join(preds_path, \"wikipedia2vec_getentities.csv\"), index=False)"
    ]
   },
   {
