--- a/notebooks/pipeline/3b_wikipedia2vec_mostsimilar.ipynb
+++ b/notebooks/pipeline/3b_wikipedia2vec_mostsimilar.ipynb
@@ -319,9 +319,9 @@
     "print(\"Mentions without Prediction: \",\\\n",
     "      round(entity_disambiguation['preds_w2v_getentity'].isnull().sum()/len(entity_disambiguation)*100,3),\"%\")\n",
     "print(\"Non-None Mentions without Prediction: \",\\\n",
-    "      round(len(entity_disambiguation[entity_disambiguation['wikipedia_ID'].notnull()\\\n",
+    "      round(len(entity_disambiguation[entity_disambiguation['wikipedia_page_ID'].notnull()\\\n",
     "                                  & entity_disambiguation['preds_w2v_getentity'].isnull()])\\\n",
-    "            /len(entity_disambiguation[entity_disambiguation['wikipedia_ID'].notnull()])*100,3),\"%\")"
+    "            /len(entity_disambiguation[entity_disambiguation['wikipedia_page_ID'].notnull()])*100,3),\"%\")"
    ]
   },
   {
